feat: update JDK version to 21+ and introduce SymbolVersion class for multi-symbol encoding